name:                servant-simple-cookie-session
version:             0.1.0.0
synopsis:            Servant session
description:         Extremely simple cokiee sessions for serrvant apis
homepage:            https://github.com/vwwv/servant-simple-cookie-session#readme
license:             BSD3
author:              Alejandro Durán Pallarés
maintainer:          vwwv@correo.ugr.es
copyright:           2016 Alejandro Durán Pallarés
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Servant.WithSession


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , binary
                     , containers
                     , cookie
                     , http-api-data
                     , http-types
                     , jwt
                     , lens
                     , lens-aeson
                     , lucid
                     , monad-logger
                     , path-pieces
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , profunctors
                     , protolude
                     , random
                     , resourcet
                     , servant
                     , servant-client
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , transformers
                     , url
                     , uuid
                     , wai
                     , wai-extra
                     , warp
                     , warp-tls
                     , wreq

  default-language:    Haskell2010


  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveAnyClass
                     , DeriveGeneric
                     , DisambiguateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , MonadComprehensions
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PatternSynonyms
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators


source-repository head
  type:     git
  location: https://github.com/vwwv/servant-simple-cookie-session
